--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Evénement du 21 au 23 avril<br /> <a href="https://www.facebook.com/events/1763
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Parallax scrolling
-				parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+				parallaxBackgroundImage: 'media/nodejsexemple.jpg',
 				parallaxBackgroundSize: '2100px 900px',
 
 				// Optional libraries used to extend on reveal.js
